[project]
name = "telepathy"
version = "0.1.0"
description = ""
authors = [
    {name = "Bart",email = "scarfboy@gmail.com"}
]
readme = "README.md"
packages = [ { include="telepathy", from="src" } ]
requires-python = ">=3.10,<3.11"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "requests (>=2.32.5,<3.0.0)",
    "telethon (>=1.42.0,<2.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "pandas (==2.3.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "alive-progress (>=3.3.0,<4.0.0)",
    "googletrans (>=4.0.2,<5.0.0)"
]

[tool.poetry.scripts]
telepathy = "telepathy.telepathy:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
